# datos_gob_es_ia

./: .gitignore  README.md  SKILL.md  install.sh  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
openspec/: config.yaml  explore.md
openspec/changes/archive/2026-06-21-datosgob-cli/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-21-datosgob-cli/specs/datosgob-api-cli/: spec.md
openspec/changes/archive/2026-06-21-fix-dataset-items/: archive-report.md  design.md  proposal.md  tasks.md
openspec/changes/fix-dataset-items/: tasks.md
openspec/specs/api-client/: spec.md
src/datosgob_cli/: __init__.py  cli.py  client.py  formatters.py
src/datosgob_cli/commands/: __init__.py  dataset.py  distribution.py  nti.py  publisher.py  spatial.py  theme.py
tests/: __init__.py  test_client.py  test_commands.py
